--- a/prueba.html
+++ b/prueba.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Mi primera pagina</h1>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus vero explicabo quis temporibus rem voluptas, suscipit dicta. Aut veritatis iste exercitationem facere vel laboriosam voluptas quos ipsum nulla. Qui, laudantium.</p>
 </body>
 </html>
